added session token function and index page

--- a/public/logincss.css
+++ b/public/logincss.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("1175594.png");
-    background-size: fill;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
