added memory card game logic and frontend

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,5 +10,7 @@ html
             .welcome-message Welcome, #{user}
             .logout-button
                 a(href='/logout') Logout
+        .play-button
+                button(onclick='window.location.href="/start-game"') Play Now
         
 
