--- a/public/indexcss.css
+++ b/public/indexcss.css
@@ -2,6 +2,11 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-image: url("homepage.gif");
+    background-size: cover; /* Ensures the background covers the entire screen */
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh; /* Ensures the background covers at least the full height of the viewport */
 }
 
 
@@ -51,9 +56,24 @@ body {
     background-color: #0056b3;
 }
 
-body {
-    background-image: url("peakpx.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.play-button {
+    text-align: center;
+    /* position:fixed; */
+    top: 50%;
+}
+
+.play-button button {
+    background-color: deepskyblue; /* Button color */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 20px 0;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
