--- a/views/quiz.pug
+++ b/views/quiz.pug
@@ -10,5 +10,6 @@ html
         #answer-buttons
           // The buttons will be dynamically added by JavaScript
         button#next-btn Next
+        button#back-btn(style="display: none;") Back to Home
     script(src="quiz.js")
 
