--- a/public/game.css
+++ b/public/game.css
@@ -2,7 +2,7 @@ body{
     background: url("pokemon-cards/pokemon-bg.jpg");
     background-size: cover;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 #board{
