--- a/public/indexcss.css
+++ b/public/indexcss.css
@@ -1,7 +1,7 @@
 /* General styles */
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-image: url("homepage.gif");
     background-size: cover; /* Ensures the background covers the entire screen */
     background-repeat: no-repeat;
@@ -63,18 +63,16 @@ body {
 }
 
 .play-button button {
-    background-color: deepskyblue; /* Button color */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    margin: 20px 0;
+    background: #001e4d;
+    color: #fff;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
     cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: block;
 }
 
 /* Centering the levels list */
@@ -93,13 +91,16 @@ body {
 }
 
 .level-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px 30px;  /* Larger padding for bigger buttons */
-    font-size: 20px;     /* Bigger font size */
-    border: none;
+    background: #001e4d;
+    color: #fff;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
     cursor: pointer;
-    border-radius: 8px;  /* Rounded corners */
+    display: block;
 }
 
 .level-button:hover {
