--- a/views/index.pug
+++ b/views/index.pug
@@ -15,5 +15,11 @@ html
             button(id='play-button' onclick='fetchLevels()') Play Now
         .levels-list(style='display:none')
             ul#levels-ul
+        script.
+            // Set username in localStorage if it’s not already set
+            const username = "#{user}";
+            if (!localStorage.getItem('username')) {
+                localStorage.setItem('username', username);
+            }
         
 
