--- a/public/game.css
+++ b/public/game.css
@@ -55,8 +55,39 @@ h1, h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
-  
+  /* z-index: 1000; */
+}
+
+#nameModal.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* z-index: 1000; */
+}
+
+.player-input {
+  margin-bottom: 20px; /* Adjusts the space between the two input fields */
+}
+
+.player-input label {
+  margin-right: 10px; /* Adds space between label and input field */
+}
+
+#submitNames {
+  margin-top: 10px; /* Adds space above the Submit button */
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .modal-content {
@@ -68,7 +99,9 @@ h1, h2 {
   text-align: center;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
   margin: 20px; /* Center the button with even spacing on left and right */
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .modal-content p {
